Fix scrollbar width calcualtion on Safari >=26

--- a/handsontable/src/styles/components/plugins/_dialog.scss
+++ b/handsontable/src/styles/components/plugins/_dialog.scss
@@ -4,6 +4,8 @@
 
 @mixin output {
   .ht-dialog {
+    @include mixins.scrollbar-styles;
+
     position: absolute;
     top: 0;
     left: 0;
